data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_726.wast
;; 7. **Test Description**: A loop where a counter conditionally decrements, and a `br_if` checks if the counter has reached zero to break. The loop should terminate when the counter hits zero.    - **Constraint**: Tests accurate decrement tracking and condition evaluation in `br_if`.    - **Differential Behavior**: Loop continues past zero or breaks early due to faulty evaluation of the decrement condition.

(assert_invalid
  (module
    (func $test_loop (param $n i32) (result i32)
      (local $i i32)
      (local.set $i (local.get $n))
      (loop (result i32)
        (local.get $i)
        (i32.const 0)
        (i32.eq)
        (br_if 1)
        (local.get $i)
        (i32.const 1)
        (i32.sub)
        (local.set $i)
        (br 0)
      )
    )
  )
  "type mismatch"
)